change java version for 2.1.0

--- a/2.1.0/Dockerfile
+++ b/2.1.0/Dockerfile
@@ -10,7 +10,7 @@
 # License for the specific language governing permissions and limitations under
 # the License.
 
-FROM java:7
+FROM java:8
 
 MAINTAINER Clemens Stolle klaemo@apache.org
 
@@ -30,13 +30,16 @@ RUN apt-get update \
   && apt-get install -y maven \
   && cd /usr/src \
   && curl -L https://github.com/rnewson/couchdb-lucene/archive/v$COUCHDB_LUCENE_VERSION.tar.gz | tar -xz \
-  && cd couchdb-lucene-$COUCHDB_LUCENE_VERSION \
-  && mvn \
-  && cd /usr/src/couchdb-lucene-$COUCHDB_LUCENE_VERSION/target \
+  && cd couchdb-lucene-$COUCHDB_LUCENE_VERSION
+
+RUN mvn
+
+RUN cd /usr/src/couchdb-lucene-$COUCHDB_LUCENE_VERSION/target \
   && unzip couchdb-lucene-$COUCHDB_LUCENE_VERSION-dist.zip \
   && mv couchdb-lucene-$COUCHDB_LUCENE_VERSION /opt/couchdb-lucene \
-  && rm -rf /usr/src/couchdb-lucene-* \
-  && apt-get remove --auto-remove -y maven \
+  && rm -rf /usr/src/couchdb-lucene-*
+
+RUN apt-get remove --auto-remove -y maven \
   && rm -rf /var/lib/apt/lists/* \
   && sed -e 's/^host=localhost$/host=0.0.0.0/' -i /opt/couchdb-lucene/conf/couchdb-lucene.ini \
   && sed -e 's/localhost:5984/couchdb:5984/' -i /opt/couchdb-lucene/conf/couchdb-lucene.ini \
