--- a/example/docker-compose.yml
+++ b/example/docker-compose.yml
@@ -12,7 +12,9 @@ services:
           - couchdb
 
   couchdb-lucene:
-    image: klaemo/couchdb-lucene:latest
+    build:
+      context: ../
+      dockerfile: 2.1.0/Dockerfile
     networks:
       dbs:
         aliases:
